# ontology-guided-world-model-maintenance

./: .gitignore  LICENSE  README.md  environment.yml
Explanations/: pyproject.toml
Explanations/data/ontologies/: A_0.owl  MO.ttl  T_op.owl  T_op.ttl
Explanations/results/: causal_validation_benchmark.csv  causal_validation_benchmark.md
Explanations/results/generation_suite/: run1_candidate_summary.md  suite_manifest.json  suite_summary.jsonl
Explanations/scripts/: aggregate_generation_suite.py  export_A0.py  run_generation_suite.py  run_one_generation.py  summarize_generation_run1.py
Explanations/src/: project_paths.py
Explanations/src/benchmark/: candidate_schema.py  case_context.py  cohere_client.py  compiler.py  experiment_runner.py  generation_service.py  local_graph_context_builder.py  ontology_chunk_builder.py  pipeline.py  prompt_builder.py  results_io.py  retrieval_context_builder.py  runner.py  scenario_registry.py  scoring.py  validator_probe.py
Explanations/src/scenarios/: case_v1.py  case_v2.py  case_v3.py  case_v4.py  case_v5.py  case_v6.py  common_delivery_prefix.py  medicine_lost.py  nominal.py  run_causal_validation_benchmark.py
Explanations/tests/: test_candidate_schema.py  test_case_context.py  test_cohere_client.py  test_compiler.py  test_experiment_runner.py  test_generation_service.py  test_local_graph_context_builder.py  test_ontology_chunk_builder.py  test_pipeline.py  test_prompt_builder.py  test_results_io.py  test_retrieval_context_builder.py  test_runner.py  test_scenario_registry.py  test_scoring.py  test_validator_probe.py
(+37 files in other folders)
