[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "explanations"
version = "0.1.0"
description = "Explanations experiments and validation tooling."
requires-python = ">=3.10"
dependencies = [
    "cohere>=5",
    "owlready2>=0.46",
    "python-dotenv>=1",
    "rdflib>=7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["project_paths"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--basetemp=.pytest_tmp"
